# Aryanspersonal

./: .breakpoints  Notes.md  README.md  code.md  code1.md  createtask.md  index.md  lcm.py  main.py  pyproject.toml
_includes/: nav.html
week0/: ship.py  swap.py
week1/: data.py  fib.py
week2/: Palindrome.py  factorial.py  math.py  palindrom.py
