[tool.poetry]
name = "repl_python3_beta_Aryanspersonal"
version = "0.1.0"
description = ""
authors = ["AryanShah40 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
funcy = "^1.17"
mathpy = "^0.3.0"
patterns = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
